Fix for start deploy

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# Exemplo de variáveis de ambiente para produção
-# Copie este arquivo para .env e preencha os valores
+# Exemplo de variáveis de ambiente para execução local
+# Copie este arquivo para `.env` e ajuste conforme necessário
 
-# Database
-DB_HOST=postgres
+# Opção A (recomendada para PaaS): URL única do banco
+# Exemplos:
+# DATABASE_URL=postgresql://user:password@host:5432/dbname
+DATABASE_URL=postgresql://challenge:challenge_2024@localhost:5432/challenge_db
+
+# Opção B (variáveis individuais):
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=challenge
 DB_PASSWORD=challenge_2024
@@ -10,3 +15,7 @@ DB_NAME=challenge_db
 
 # Backend
 PORT=8000
+
+# Frontend (build-time):
+# VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://localhost:8000
