fix(db): fail-fast on invalid DATABASE_URL in production; avoid silent localhost fallback; chore(deps): add pg to root devDependencies

--- a/package.json
+++ b/package.json
@@ -9,4 +9,7 @@
     "start": "cd backend && npm ci --production && npm start",
     "start:dev": "cd backend && npm ci && npm run dev"
   }
+  ,"devDependencies": {
+    "pg": "^8.11.0"
+  }
 }
